--- a/js/prm-service-details-after/eth-metagrid/eth-metagrid.html
+++ b/js/prm-service-details-after/eth-metagrid/eth-metagrid.html
@@ -5,9 +5,8 @@
                 <h4 class="section-title md-title light-text">
                     {{item.name}}
                     <span class="eth-metagrid-poweredby">
-                        (Links powered by
-                        <a target="_blank" href="https://www.metagrid.ch/">
-                            Metagrid
+                        (<a target="_blank" href="https://www.metagrid.ch/">
+                            <span flex translate='unige.meatagrid.by'>Powered by Metagrid</span>
                             <prm-icon external-link="" icon-type="svg" svg-icon-set="primo-ui" icon-definition="open-in-new"></prm-icon>                            
                         </a>)
                     </span>
