Fix translate label

--- a/js/prm-service-details-after/eth-metagrid/eth-metagrid.html
+++ b/js/prm-service-details-after/eth-metagrid/eth-metagrid.html
@@ -6,7 +6,7 @@
                     {{item.name}}
                     <span class="eth-metagrid-poweredby">
                         (<a target="_blank" href="https://www.metagrid.ch/">
-                            <span flex translate='unige.meatagrid.by'>Powered by Metagrid</span>
+                            <span flex translate='unige.metagrid.by'>Powered by Metagrid</span>
                             <prm-icon external-link="" icon-type="svg" svg-icon-set="primo-ui" icon-definition="open-in-new"></prm-icon>                            
                         </a>)
                     </span>
