--- a/js/prm-location-holdings-after/usi-location-open-close/usi-location-open-close.html
+++ b/js/prm-location-holdings-after/usi-location-open-close/usi-location-open-close.html
@@ -3,8 +3,8 @@
 		<img src="/discovery/custom/41SLSP_USI-BiUSI/img/open_shelf_traced_icon.png" alt="">
 	</div>
 	<div class="open-closed-txt">
-		<span style="padding: 0.1em 0px 0px; font-size: 1em; color: green; display: flex; max-width: 200px;">
-			{{::$ctrl.ethConfigService.getLabel($ctrl.config, 'open')}}
+		<span style="padding: 0.1em 0px 0px; font-size: 1em; color: green; display: flex; max-width: 200px;" translate='unige.stacks_open'>
+			Open stacks
 		</span>
 	</div>
 </div>
@@ -13,8 +13,8 @@
 		<img src="/discovery/custom/41SLSP_USI-BiUSI/img/closed_shelf_traced_icon.png" alt="">
 	</div>
 	<div class="open-closed-txt">
-		<span style="padding: 0.1em 0px 0px; font-size: 1em; color: red; display: flex; max-width: 200px;">
-			{{::$ctrl.ethConfigService.getLabel($ctrl.config, 'closed')}}
+		<span style="padding: 0.1em 0px 0px; font-size: 1em; color: red; display: flex; max-width: 200px;" translate='unige.stacks_closed'>
+			Closed stacks
 		</span>
 	</div>
 </div>
