Change USI for UGE

--- a/js/prm-location-holdings-after/usi-location-open-close/usi-location-open-close.html
+++ b/js/prm-location-holdings-after/usi-location-open-close/usi-location-open-close.html
@@ -1,4 +1,4 @@
-<div class="open-closed-container" ng-if="$ctrl.usilocation.isopen && $ctrl.usilocation.isusi">
+<div class="open-closed-container" ng-if="$ctrl.usilocation.isopen && $ctrl.usilocation.isuge">
 	<div class="open-closed-img">
 		<img src="/discovery/custom/41SLSP_UGE-VU3/img/open_shelf_traced_icon.png" alt="">
 	</div>
@@ -8,7 +8,7 @@
 		</span>
 	</div>
 </div>
-<div class="open-closed-container" ng-if="!$ctrl.usilocation.isopen && $ctrl.usilocation.isusi">
+<div class="open-closed-container" ng-if="!$ctrl.usilocation.isopen && $ctrl.usilocation.isuge">
 	<div class="open-closed-img">
 		<img src="/discovery/custom/41SLSP_UGE-VU3/img/closed_shelf_traced_icon.png" alt="">
 	</div>
