--- a/js/prm-location-holdings-after/usi-location-open-close/usi-location-open-close.html
+++ b/js/prm-location-holdings-after/usi-location-open-close/usi-location-open-close.html
@@ -1,19 +1,19 @@
 <div class="open-closed-container" ng-if="$ctrl.usilocation.isopen && $ctrl.usilocation.isuge">
 	<div class="open-closed-img">
-		<img src="/discovery/custom/41SLSP_UGE-VU3/img/open_shelf_traced_icon.png" alt="">
+		<img src="/discovery/custom/41SLSP_UGE-VU1/img/open_shelf_traced_icon.png" alt="">
 	</div>
-	<div class="open-closed-txt">
-		<span style="padding: 0.1em 0px 0px; font-size: 1em; color: green; display: flex; max-width: 200px;" translate='unige.stacks_open'>
+	<div class="unige-open-txt">
+		<span translate='unige.stacks_open'>
 			Open stacks
 		</span>
 	</div>
 </div>
 <div class="open-closed-container" ng-if="!$ctrl.usilocation.isopen && $ctrl.usilocation.isuge">
 	<div class="open-closed-img">
-		<img src="/discovery/custom/41SLSP_UGE-VU3/img/closed_shelf_traced_icon.png" alt="">
+		<img src="/discovery/custom/41SLSP_UGE-VU1/img/closed_shelf_traced_icon.png" alt="">
 	</div>
-	<div class="open-closed-txt">
-		<span style="padding: 0.1em 0px 0px; font-size: 1em; color: red; display: flex; max-width: 200px;" translate='unige.stacks_closed'>
+	<div class="unige-closed-txt">
+		<span translate='unige.stacks_closed'>
 			Closed stacks
 		</span>
 	</div>
